# baxter3-master

./: CMakeLists.txt  README.md  package.xml  position_control_python.py
launch/: baxter3.launch
src/: get_data_from_controller.py  gohome.py  joint_trajectory_client.py  maincontroller.py  me495_project.py  me495_project_2obj.py  moveitTutorial.py  position_correction.py  printjointangles.py  setup.py  zacktesting.py
